Fix upload coordinates

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@ GROUP=com.github.akarnokd
 VERSION_NAME=3.0.0-RC2
 version=3.0.0-RC2
 
-POM_ARTIFACT_ID=rxjava3-fiber-interop
-POM_NAME=RxJava 3 Fiber Interop
+POM_ARTIFACT_ID=rxjava3-bridge
+POM_NAME=RxJava 3 Bridge to/from RxJava 2
 POM_PACKAGING=jar
 
 POM_DESCRIPTION=Bridge library between RxJava 2 and RxJava 3
