--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ repositories {
 
 dependencies {
     implementation "io.reactivex.rxjava2:rxjava:2.2.17"
-    implementation "io.reactivex.rxjava3:rxjava:3.0.0-RC9"
+    implementation "io.reactivex.rxjava3:rxjava:3.0.0"
     testImplementation 'junit:junit:4.13'
 }
 
